--- a/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
+++ b/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
@@ -5,6 +5,8 @@
     <Platforms>x64</Platforms>
     <SignAssembly>false</SignAssembly>
     <Version>3.0.0.0</Version>
+    <AssemblyName>Minecraft_QQ</AssemblyName>
+    <RootNamespace>Minecraft_QQ</RootNamespace>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
