--- a/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
+++ b/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
@@ -10,7 +10,7 @@
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutputPath>..\build_out\core</OutputPath>
+    <OutputPath>..\build_out\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
