--- a/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
+++ b/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
@@ -4,10 +4,11 @@
     <OutputType>Exe</OutputType>
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>x64</Platforms>
+    <ApplicationIcon>Color_yr.ico</ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutputPath>..\build_out\cmd</OutputPath>
+    <OutputPath>..\build_out\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
