--- a/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
+++ b/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
@@ -5,6 +5,9 @@
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>x64</Platforms>
     <ApplicationIcon>Color_yr.ico</ApplicationIcon>
+    <AssemblyVersion>3.2.0.0</AssemblyVersion>
+    <FileVersion>3.2.0.0</FileVersion>
+    <Version>3.2.0.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
