--- a/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
+++ b/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
@@ -2,16 +2,15 @@
 
   <PropertyGroup>
     <TargetFramework>net5.0</TargetFramework>
-    <Platforms>x64</Platforms>
+    <Platforms>AnyCPU</Platforms>
     <SignAssembly>false</SignAssembly>
-    <Version>3.2.0.0</Version>
+    <Version>3.3.0.0</Version>
     <AssemblyName>Minecraft_QQ_Core</AssemblyName>
     <RootNamespace>Minecraft_QQ_Core</RootNamespace>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutputPath>..\build_out\</OutputPath>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\build_out\Core\</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
@@ -20,12 +19,16 @@
 
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="4.1.0" />
-    <PackageReference Include="Fody" Version="6.2.4">
+    <PackageReference Include="Fody" Version="6.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="MySql.Data" Version="8.0.21" />
+    <PackageReference Include="MySql.Data" Version="8.0.22" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
+
+  <Target Name="PostBuild" AfterTargets="PostBuildEvent">
+    <Exec Command="del $(OutDir)Minecraft_QQ_Core.deps.json" />
+  </Target>
 
 </Project>
