--- a/Minecraft_QQ_Gui/Minecraft_QQ_Gui.csproj
+++ b/Minecraft_QQ_Gui/Minecraft_QQ_Gui.csproj
@@ -2,21 +2,22 @@
 
   <PropertyGroup>
     <OutputType>WinExe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net5.0-windows</TargetFramework>
     <UseWPF>true</UseWPF>
-    <Platforms>x64</Platforms>
+    <Platforms>AnyCPU</Platforms>
     <ApplicationIcon>Color_yr.ico</ApplicationIcon>
-    <Version>3.2.0.0</Version>
+    <Version>3.3.0.0</Version>
+    <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
   </PropertyGroup>
 
-  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|x64'">
-    <OutputPath>..\build_out\</OutputPath>
-    <PlatformTarget>AnyCPU</PlatformTarget>
+  <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
+    <OutputPath>..\build_out\Gui\</OutputPath>
+    <GenerateSerializationAssemblies>Auto</GenerateSerializationAssemblies>
   </PropertyGroup>
 
   <ItemGroup>
     <PackageReference Include="Costura.Fody" Version="4.1.0" />
-    <PackageReference Include="Fody" Version="6.2.4">
+    <PackageReference Include="Fody" Version="6.3.0">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
@@ -82,7 +83,7 @@
   </ItemGroup>
 
   <Target Name="PostBuild" AfterTargets="PostBuildEvent">
-    <Exec Command="del $(OutDir)Minecraft_QQ_Gui.deps.json" />
+    <Exec Command="del $(OutDir)Minecraft_QQ_Gui.deps.json&#xD;&#xA;del $(OutDir)Minecraft_QQ_Gui.runtimeconfig.dev.json" />
   </Target>
 
 </Project>
