--- a/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
+++ b/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
@@ -4,9 +4,10 @@
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU</Platforms>
     <SignAssembly>false</SignAssembly>
-    <Version>3.3.0.0</Version>
+    <Version>3.4.0.0</Version>
     <AssemblyName>Minecraft_QQ_Core</AssemblyName>
     <RootNamespace>Minecraft_QQ_Core</RootNamespace>
+    <ApplicationIcon></ApplicationIcon>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -23,7 +24,7 @@
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="MySql.Data" Version="8.0.22" />
+    <PackageReference Include="MySql.Data" Version="8.0.23" />
     <PackageReference Include="Newtonsoft.Json" Version="12.0.3" />
   </ItemGroup>
 
