--- a/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
+++ b/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
@@ -7,7 +7,9 @@
     <ApplicationIcon>Minecraft_QQ.ico</ApplicationIcon>
     <AssemblyVersion>3.5.0.0</AssemblyVersion>
     <FileVersion>3.5.0.0</FileVersion>
-    <Version>3.5.0</Version>
+    <Version>3.5.1</Version>
+    <Authors>Coloryr</Authors>
+    <Product></Product>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
