--- a/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
+++ b/Minecraft_QQ_Core/Minecraft_QQ_Core.csproj
@@ -4,10 +4,12 @@
     <TargetFramework>net5.0</TargetFramework>
     <Platforms>AnyCPU</Platforms>
     <SignAssembly>false</SignAssembly>
-    <Version>3.5.0</Version>
+    <Version>3.5.1</Version>
     <AssemblyName>Minecraft_QQ_Core</AssemblyName>
     <RootNamespace>Minecraft_QQ_Core</RootNamespace>
     <ApplicationIcon></ApplicationIcon>
+    <Authors>Coloryr</Authors>
+    <Product></Product>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
