--- a/Minecraft_QQ_Gui/Minecraft_QQ_Gui.csproj
+++ b/Minecraft_QQ_Gui/Minecraft_QQ_Gui.csproj
@@ -6,8 +6,10 @@
     <UseWPF>true</UseWPF>
     <Platforms>AnyCPU</Platforms>
     <ApplicationIcon>Minecraft_QQ.ico</ApplicationIcon>
-    <Version>3.5.0</Version>
+    <Version>3.5.1</Version>
     <AutoGenerateBindingRedirects>false</AutoGenerateBindingRedirects>
+    <Authors>Coloryr</Authors>
+    <Product></Product>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
