--- a/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
+++ b/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
@@ -2,7 +2,7 @@
 
   <PropertyGroup>
     <OutputType>Exe</OutputType>
-    <TargetFramework>net5.0</TargetFramework>
+    <TargetFramework>net6.0</TargetFramework>
     <Platforms>AnyCPU</Platforms>
     <ApplicationIcon>Minecraft_QQ.ico</ApplicationIcon>
     <AssemblyVersion>3.5.0.0</AssemblyVersion>
@@ -10,6 +10,7 @@
     <Version>3.5.2</Version>
     <Authors>Coloryr</Authors>
     <Product></Product>
+    <DebugType>embedded</DebugType>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
