--- a/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
+++ b/Minecraft_QQ_Cmd/Minecraft_QQ_Cmd.csproj
@@ -7,7 +7,7 @@
     <ApplicationIcon>Minecraft_QQ.ico</ApplicationIcon>
     <AssemblyVersion>3.9.0</AssemblyVersion>
     <FileVersion>3.9.0</FileVersion>
-    <Version>3.8.0</Version>
+    <Version></Version>
     <Authors>Coloryr</Authors>
     <Product></Product>
     <DebugType>embedded</DebugType>
