--- a/.github/workflows/dotnet-core.yml
+++ b/.github/workflows/dotnet-core.yml
@@ -1,24 +1,22 @@
-name: .NET构建
+# name: .NET构建
 
-on: [push]
+# on: [push]
 
-jobs:
-  build:
-
-    runs-on: windows-2019
-
-    steps:
-    - uses: actions/checkout@v2
-    - name: 设置.NET Core
-      uses: actions/setup-dotnet@v1
-      with:
-        dotnet-version: 5.0.200
-    - name: 更新依赖
-      run: dotnet restore
-    - name: 构建
-      run: dotnet build
-    - name: 更新构建文件
-      uses: actions/upload-artifact@v2
-      with:
-        name: "Minecraft_QQ_All"
-        path: build_out
+# jobs:
+#   build:
+#     runs-on: ubuntu-latest
+#     steps:
+#     - uses: actions/checkout@v2
+#     - name: 设置.NET Core
+#       uses: actions/setup-dotnet@v1
+#       with:
+#         dotnet-version: 8.0.100
+#     - name: 构建
+#       run: ./build/build-ubuntu.sh
+#       shell: bash
+#       working-directory: ./
+#     - name: 更新构建文件
+#       uses: actions/upload-artifact@v2
+#       with:
+#         name: "Minecraft_QQ_All"
+#         path: build_out
